Closed
Bug 919265
Opened 12 years ago
Closed 12 years ago
Leak with VTTCue.getCueAsHTML
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla27
People
(Reporter: jruderman, Assigned: reyre)
Details
(Keywords: memory-leak, regression, testcase)
Attachments
(4 files)
|
182 bytes,
text/html
|
Details | |
|
2.24 KB,
text/plain
|
Details | |
|
1.24 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
|
2.29 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
1. Set
user_pref("media.webvtt.enabled", true);
2. Run with XPCOM_MEM_LEAK_LOG=2
3. Load the testcase
4. Quit
Result: leak
Maybe a regression from bug 895091?
http://mxr.mozilla.org/mozilla-central/source/content/media/test/crashtests/882549.html?force=1 seems to test the same thing, so I wonder why the crashtest suite didn't catch this bug.
| Reporter | ||
Comment 1•12 years ago
|
||
| Assignee | ||
Comment 2•12 years ago
|
||
The crash test for bug 882549 won't work anymore as TextTrackCue isn't defined anymore. It's VTTCue now. That's probably why we haven't heard anything from it about the leak.
| Reporter | ||
Comment 3•12 years ago
|
||
In that case, two tests should be updated to use the new name:
content/media/test/crashtests/882549.html
content/media/test/crashtests/894104.html
| Assignee | ||
Comment 4•12 years ago
|
||
I'll take a look at this and update those two crashtests with the correct name.
| Assignee | ||
Updated•12 years ago
|
Assignee: nobody → rick.eyre
| Assignee | ||
Comment 5•12 years ago
|
||
Attachment #809371 -
Flags: review?(bzbarsky)
| Assignee | ||
Comment 6•12 years ago
|
||
Attachment #809375 -
Flags: review?(bzbarsky)
Comment 7•12 years ago
|
||
Comment on attachment 809371 [details] [diff] [review]
Part 1 v1: Fix TextTrackCue() crashtests to use VTTCue() r=bz
r=me
Attachment #809371 -
Flags: review?(bzbarsky) → review+
Comment 8•12 years ago
|
||
Comment on attachment 809375 [details] [diff] [review]
Part 2 v1: Add ClearOnShutdown() call on the static WebVTTParserWrapper r=bz
r=me
Attachment #809375 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Comment 9•12 years ago
|
||
Thanks for review bz.
Try push: https://tbpl.mozilla.org/?tree=Try&rev=f64ea16e373b
Comment 11•12 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/fd0ad8462ba7
https://hg.mozilla.org/integration/mozilla-inbound/rev/07e358bb9954
Flags: in-testsuite+
Keywords: checkin-needed
Comment 12•12 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/fd0ad8462ba7
https://hg.mozilla.org/mozilla-central/rev/07e358bb9954
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in
before you can comment on or make changes to this bug.
Description
•